--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -40,6 +42,7 @@
     "node-sass": "^4.5.3",
     "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
+    "react-hot-loader": "^3.1.1",
     "sass-loader": "^6.0.6",
     "static-server": "^2.0.6",
     "style-loader": "^0.19.0",
