--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
@@ -39,6 +38,9 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
     "sass-loader": "^6.0.6",
