--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "compression-webpack-plugin": "^1.1.11",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
